--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="reset-button">Play Again!</div>
     </div>
 
-    <div>
+    <div id = "style-me">
       X Score: <div id="x-score">0</div>
       O Score: <div id="o-score">0</div>
     </div>
