--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@
     </div>
 
     <div id = "style-me">
-      X Score: <div id="x-score">0</div>
-      O Score: <div id="o-score">0</div>
+      <table>
+        <tr>
+          <td> X Score: <div id="x-score">0</div> </td>
+          <td> O Score: <div id="o-score">0</div> </td>
+        </tr>
+      </table>
     </div>
 
   </body>
