fixed center error

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
 
     <div id = "style-me">
-      <table>
+      <table id = "center-me">
         <tr>
           <td> X Score: <div id="x-score">0</div> </td>
           <br>
