--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
     <div id = "style-me">
       <table id = "center-me">
         <tr>
-          <td> X Score: <div id="x-score">0</div> </td>
+          <td id = "td1"> X Score: <div id="x-score">0</div> </td>
           <br>
-          <td> O Score: <div id="o-score">0</div> </td>
+          <td>     </td>
+          <td id = "td2"> O Score: <div id="o-score">0</div> </td>
         </tr>
       </table>
     </div>
